# sb2solace

./: Cargo.toml  README.md  dev.ipynb  pyproject.toml
src/: main.rs
src/sb2solace/: __init__.py  __main__.py
